--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="-1">
     <meta name="description" content="无锡瑞驰曼科技有限公司">
-    <meta name="Keywords" content="富林泰克,传感器,称重">
-    <title>pcproject</title>
+    <meta name="Keywords" content="富林泰克,传感器,称重, 无锡富林泰克, 无锡传感器, 无锡称重">
+    <meta name="baidu-site-verification" content="ReOMOoM4yQ" />
+    <title>无锡瑞驰曼科技有限公司</title>
   </head>
   <body>
     <div id="app"></div>
